--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1>
         Hello, Word!
     </h1>
+    <h2>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae quod molestiae blanditiis assumenda expedita aut neque, ut, nostrum maiores ipsam ipsa ratione at amet sunt optio. Dolores omnis deserunt ratione.
+    </h2>
 </body>
 </html>
