--- a/index.html
+++ b/index.html
@@ -5,18 +5,4 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 
-    <title>Corrigindo um Bug</title>
->>>>>>> novo-fix
-</head>
-<body>
-    <h1>
-        Hello, Word!
-    </h1>
-
-    <h2>Subtexto</h2>
->>>>>>> novo-fix
-    <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae quod molestiae blanditiis assumenda expedita aut neque, ut, nostrum maiores ipsam ipsa ratione at amet sunt optio. Dolores omnis deserunt ratione.
-    </h3>
-</body>
-</html>
+nvskjnfkjaewnsfn
